Connect branches client_dashboard, client_programs_page and create_programs. Fix some connections and organize files accordingly.

--- a/client/templates/client/all_programs.html
+++ b/client/templates/client/all_programs.html
@@ -9,7 +9,7 @@
     
     </head>
     <body class="create_program">
-        {% include 'client/base.html' %}
+        {% include 'client/cliet_base.html' %}
 
         <div class="text-center mt-4">
             <a href="{% url 'create_program' %}" class="btn btn-primary">
