--- a/client/templates/client/create_program.html
+++ b/client/templates/client/create_program.html
@@ -11,7 +11,7 @@
     
     </head>
     <body class="create_program">
-        {% include 'client/base.html' %}
+        {% include 'client/client_base.html' %}
 
         <div class="container mt-5">
             <h2 class="mb-4">Create a New Program</h2>
