--- a/users/static/users/css/userresponse_style.css
+++ b/users/static/users/css/userresponse_style.css
@@ -56,3 +56,15 @@
     background-color: #73c4fd;
     background-image: url("data:image/svg+xml,%3Csvg width='60' height='48' viewBox='0 0 60 48' xmlns='http://www.w3.org/2000/svg'%3E%3Cg id='Page-1' fill='none' fill-rule='evenodd'%3E%3Cg id='fancy-rectangles' fill='%230148fd' fill-opacity='0.18'%3E%3Cpath d='M6 12h6v12H6V12zm12 0h6v12h-6V12z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
+
+
+.exercise-link {
+    text-decoration: none; 
+    display: inline-block;
+}
+
+.exercise-link button {
+    width: 100%; 
+    border: none;
+    cursor: pointer;
+}
