--- a/users/templates/UserResponce/user_responses_main.html
+++ b/users/templates/UserResponce/user_responses_main.html
@@ -1,15 +1,16 @@
-{% extends "base.html" %}
+{% extends 'users/base.html' %}
 {% load static %}
 
 {% block content %}
     <div class="exercise-container">
-        {% load static %}
-        <link rel="stylesheet" href="{% static '/css/userresponse_style.css' %}">
+        <link rel="stylesheet" href="{% static 'users/css/userresponse_style.css' %}">
         {% for exercise in exercises %}
-            <button class="exercise-box exercise-style-{{ forloop.counter|divisibleby:5|add:1 }}">
-                <h3>{{ exercise.title }}</h3>
-                <p>{{ exercise.exercise_type }}</p>
-            </button>
+            <a href="{% url 'exercise_detail' exercise.id %}" class="exercise-link">
+                <button class="exercise-box exercise-style-{{ forloop.counter|divisibleby:5|add:3 }}">
+                    <h3>{{ exercise.title }}</h3>
+                    <p>{{ exercise.exercise_type }}</p>
+                </button>
+            </a>
         {% empty %}
             <p>No exercises found!</p>
         {% endfor %}
