--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -3,6 +3,7 @@
 <head>
     {% load static %}  
     
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <!-- Link to your CSS file -->
     <link rel="stylesheet" href="{% static 'users/css/navbar.css' %}">
 
