--- a/users/templates/UserResponce/user_responses_main.html
+++ b/users/templates/UserResponce/user_responses_main.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="{% static 'users/css/userresponse_style.css' %}">
         {% for exercise in exercises %}
             <a href="{% url 'exercise_detail' exercise.id %}" class="exercise-link">
-                <button class="exercise-box exercise-style-{{ forloop.counter|divisibleby:5|add:3 }}">
+                <button class="exercise-box {{ exercise.bg_class }}">
                     <h3>{{ exercise.title }}</h3>
                     <p>{{ exercise.exercise_type }}</p>
                 </button>
