--- a/users/templates/UserResponce/user_responses_main.html
+++ b/users/templates/UserResponce/user_responses_main.html
@@ -2,17 +2,44 @@
 {% load static %}
 
 {% block content %}
-    <div class="exercise-container">
+    <div class="container">
+        <h2 class="page-title">My Responses</h2>
         <link rel="stylesheet" href="{% static 'users/css/userresponse_style.css' %}">
         {% for exercise in exercises %}
-            <a href="{% url 'exercise_detail' exercise.id %}" class="exercise-link">
-                <button class="exercise-box {{ exercise.bg_class }}">
-                    <h3>{{ exercise.title }}</h3>
-                    <p>{{ exercise.exercise_type }}</p>
-                </button>
-            </a>
+        <div class="exercise-card">
+            <div class="exercise-header" onclick="toggleExercise('{{ exercise.id }}')">
+                <h3>{{ exercise.title }}</h3>
+                <button class="toggle-btn">+</button>
+            </div>
+            <div id="exercise-{{ exercise.id }}" class="exercise-content">
+                <p class="exercise-description">{{ exercise.description }}</p>
+                
+                {% for question in exercise.questions.all %}
+                <div class="question-card">
+                    <h4>{{ question.question_text }}</h4>
+
+                    {% for response in question.responses.all %}
+                    <div class="response-box">
+                        <p>{{ response.response_text }}</p>
+                    </div>
+                    {% empty %}
+                    <p class="no-response">No responses yet.</p>
+                    {% endfor %}
+                </div>
+                {% empty %}
+                <p class="no-question">No questions found.</p>
+                {% endfor %}
+            </div>
+        </div>
         {% empty %}
-            <p>No exercises found!</p>
+        <p>No exercises found.</p>
         {% endfor %}
     </div>
+
+    <script>
+        function toggleExercise(exerciseId) {
+            const content = document.getElementById(`exercise-${exerciseId}`);
+            content.classList.toggle("show");
+        }
+    </script>
 {% endblock %}
