--- a/users/templates/UserResponce/user_responses_main.html
+++ b/users/templates/UserResponce/user_responses_main.html
@@ -2,9 +2,10 @@
 {% load static %}
 
 {% block content %}
-    <div class="container">
+    <div class="content"> <!-- Updated to match your friend's layout -->
         <h2 class="page-title">My Responses</h2>
         <link rel="stylesheet" href="{% static 'users/css/userresponse_style.css' %}">
+        
         {% for exercise in exercises %}
         <div class="exercise-card">
             <div class="exercise-header" onclick="toggleExercise('{{ exercise.id }}')">
