--- a/client/templates/client/base.html
+++ b/client/templates/client/base.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-    {% include 'partials/client_navbar.html' %}
+    {% include 'client/partials/navbar.html' %}
 
     <div class="content">
         {% block content %}
