--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-    {% include 'partials/navbar.html' %}
+    {% include 'users/partials/navbar.html' %}
 
     <div class="content">
         {% block content %}
